--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,10 @@
   border-radius: 0.375rem;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
